# Track_ball

./: README.md
Dataset/Ball_dataset/: rename.py  trainList.py
Dataset/Ball_dataset/Annotations/: 101.xml  1013.xml  1014.xml  1016.xml  1017.xml  1018.xml  1019.xml  102.xml  1020.xml  1022.xml  1025.xml  1026.xml  1027.xml  1028.xml  1031.xml  1032.xml  1036.xml  1038.xml  1039.xml  104.xml  1042.xml  1043.xml  1044.xml  1048.xml  1049.xml  1050.xml  1051.xml  1052.xml  1053.xml  1055.xml  1058.xml  1059.xml  106.xml  1061.xml  1062.xml  1063.xml  1064.xml  1068.xml  1070.xml  1074.xml  (+628 more)
Dataset/Ball_dataset/ImageSets/Main/: train.txt
Dataset/ball_dataset/Annotations/: 100.xml  1015.xml  1021.xml  1024.xml  1029.xml  103.xml  1030.xml  1033.xml  1035.xml  1037.xml  1040.xml  1041.xml  1046.xml  1047.xml  105.xml  1054.xml  1057.xml  1060.xml  1065.xml  1066.xml  1069.xml  107.xml  1071.xml  1072.xml  1073.xml  1076.xml  1079.xml  1081.xml  1082.xml  1085.xml  1086.xml  1088.xml  1093.xml  1094.xml  1099.xml  110.xml  1101.xml  1103.xml  1105.xml  1106.xml  (+608 more)
Dataset/ball_dataset/ImageSets/Main/: testval.txt  trainval.txt
Dataset/models/onnx_file/: labels.txt
DetectionDemo/: CMakeLists.txt  detection.cpp
TrackBall/: CMakeLists.txt  trackball.cpp
